# GameEngine

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.md
GameEngineSolution/: CMakeLists.txt  GameEngineSolution.slnx
GameEngineSolution/Editor/: CMakeLists.txt  Editor.vcxproj
GameEngineSolution/Editor/src/: main.cpp
GameEngineSolution/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
GameEngineSolution/Engine/include/ECS/: ComponentManager.h  Entity.h  EntityBuilder.h  EntityHandle.h  System.h  SystemManager.h  SystemPhase.h
GameEngineSolution/Engine/include/ECS/Systems/: CameraSystem.h  ECSMovementSystem.h  ECSPhysicsSystem.h  ECSRenderSystem.h
GameEngineSolution/Engine/include/Events/: ApplicationEvents.h  ECSEvents.h  Event.h  EventBus.h  InputEvents.h
GameEngineSolution/Engine/include/Input/: Input.h
GameEngineSolution/Engine/include/Physics/: SpatialGrid.h
GameEngineSolution/Engine/include/Platform/: Window.h
GameEngineSolution/Engine/include/ResourceManagement/: AssetManager.h  SceneLoader.h
GameEngineSolution/Engine/include/UI/: ImmediateGUI.h  UIRenderer.h
GameEngineSolution/Engine/src/ECS/: ComponentManager.cpp
GameEngineSolution/Engine/src/ECS/Systems/: CameraSystem.cpp  ECSMovementSystem.cpp  ECSPhysicsSystem.cpp  ECSRenderSystem.cpp  InputSystem.cpp
GameEngineSolution/Engine/src/Input/: Input.cpp
GameEngineSolution/Engine/src/Physics/: SpatialGrid.cpp
GameEngineSolution/Engine/src/Platform/: Window.cpp
GameEngineSolution/Engine/src/ResourceManagement/: AssetManager.cpp  SceneLoader.cpp
GameEngineSolution/Engine/src/UI/: DebugUIRenderer.cpp  ImmediateGUI.cpp  UIRenderer.cpp
GameEngineSolution/Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters
GameEngineSolution/Game/include/Application/: Game.h  Scene.h
GameEngineSolution/Game/include/Systems/: PlayerMovementSystem.h  WeaponSystem.h
GameEngineSolution/Game/src/Application/: Game.cpp  Scene.cpp
GameEngineSolution/Game/src/Systems/: PlayerMovementSystem.cpp  ProjectileSystem.cpp  WeaponSystem.cpp
GameEngineSolution/GameEngineProject/: GameEngineProject.vcxproj  GameEngineProject.vcxproj.filters
GameEngineSolution/GameEngineProject/Assets/Scenes/: default.json
GameEngineSolution/GameEngineProject/include/Application/: Scene.h
GameEngineSolution/GameEngineProject/include/Config/: GameConfig.h
GameEngineSolution/GameEngineProject/include/ECS/: ComponentManager.h  Components.h  ECSExample.h  Entity.h
GameEngineSolution/GameEngineProject/include/ECS/Systems/: CameraSystem.h  ECSPhysicsSystem.h  ECSRenderSystem.h  HealthSystem.h  PlayerMovementSystem.h  ProjectileSystem.h  WeaponSystem.h
GameEngineSolution/GameEngineProject/include/Input/: Input.h
GameEngineSolution/GameEngineProject/include/Renderer/: Renderer.h
GameEngineSolution/GameEngineProject/include/ResourceManagement/: SceneLoader.h
GameEngineSolution/GameEngineProject/include/UI/: DebugUIRenderer.h
GameEngineSolution/GameEngineProject/src/Application/: Game.cpp  Scene.cpp
GameEngineSolution/GameEngineProject/src/ECS/: ComponentManager.cpp
GameEngineSolution/GameEngineProject/src/EntityComponentSystem/: GameObject.cpp
GameEngineSolution/GameEngineProject/src/Input/: Input.cpp
GameEngineSolution/GameEngineProject/src/Renderer/: Graphics.cpp  Renderer.cpp  Skybox.cpp
GameEngineSolution/GameEngineProject/src/ResourceManagement/: SceneLoader.cpp
GameEngineSolution/GameEngineProject/src/UI/: DebugUIRenderer.cpp
vs/Graphics Engine/Graphics Engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  EnginePCH.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Graphics Engine.vcxproj  Graphics Engine.vcxproj.filters  Graphics.cpp  Graphics.h  Input.cpp  Material.cpp  Mesh.h  ModelLoader.cpp  PostProcess.cpp  PostProcess.h  SimpleFont.cpp  SimpleFont.h  UIRenderer.cpp  Window.cpp  main.cpp
vs/Graphics Engine/Graphics Engine/src/: Bullet.cpp  Collider.cpp  Game.cpp  GameObject.cpp  Gun.cpp  Mesh.cpp  Player.cpp  Renderer.cpp  Scene.cpp
vs/Graphics Engine/Graphics Engine/src/include/: Game.h  (+2 more)
(+11 files in other folders)
